[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pygnssutils"
version = "0.0.1"
description = "GNSS Command Line Utilities"
authors = ["Aidan Cottuli <aidan.cottuli@ghd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pyubx2 = "^1.2.23"
pyspartn = "^0.1.4"
pyserial = "^3.5"
paho-mqtt = "^1.6.1"
python = "^3.7"

[tool.poetry.scripts]
gnssdump = "pygnssutils.gnssdump:main"
gnssserver = "pygnssutils.gnssserver:main"
gnssntripclient = "pygnssutils.gnssntripclient:main"
gnssmqttclient = "pygnssutils.gnssmqttclient:main"
ubxsetrate = "pygnssutils.ubxsetrate:main"
ubxsave = "pygnssutils.ubxsave:main"
ubxload = "pygnssutils.ubxload:main"
